--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -5,7 +5,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout latest push
+        uses: actions/checkout@v2
       - name: Install dependencies
         run: npm ci
       - name: Build
