--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "homepage": "https://github.com/unitof/the-fiction-calendar#readme",
   "jest": {
-    "testMatch": ["**/tests/**/*.[jt]s?(x)"]
+    "testMatch": [
+      "**/tests/**/*.[jt]s?(x)"
+    ]
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
